Replace a deprecated function